# voice-MOSS-TTS

./: .gitignore  .gitmodules  CLAUDE.md  README.md  generate_adam_qwen3.py  generate_celebrity.py  generate_greg_qwen3.py  narration_farmers_choice.py  optimized_generate.py  pyproject.toml  studio_post_process.py
celebrities/: reference_manifest.yaml
celebrities/configs/: adam_barrow.yaml  anthony_bourdain.yaml  barack_obama.yaml  bill_murray.yaml  cate_blanchett.yaml  christopher_walken.yaml  conan_obrien.yaml  david_attenborough.yaml  gilbert_gottfried.yaml  gregory_gorin.yaml  ira_glass.yaml  jack_lemmon.yaml  jack_nicholson.yaml  james_earl_jones.yaml  joe_rogan.yaml  john_candy.yaml  martin_short.yaml  matthew_mcconaughey.yaml  morgan_freeman.yaml  oprah_winfrey.yaml  sam_elliott.yaml  steve_martin.yaml  werner_herzog.yaml  zendaya.yaml
celebrities/profiles/: adam_barrow-voice-profile.md  anthony_bourdain-voice-profile.md  barack_obama-voice-profile.md  bill_murray-voice-profile.md  cate_blanchett-voice-profile.md  christopher_walken-voice-profile.md  conan_obrien-voice-profile.md  david_attenborough-voice-profile.md  gilbert_gottfried-voice-profile.md  gregory_gorin-voice-profile.md  ira_glass-voice-profile.md  jack_lemmon-voice-profile.md  jack_nicholson-voice-profile.md  james_earl_jones-voice-profile.md  zendaya-voice-profile.md  (+9 more)
docs/: voice-cloning-process.md
legacy/: benchmark_generate.py  mps_compat.py  narration_farmers_choice.py  narration_seo_audit_report.py  test_tts.py
tools/: batch_extract_references.py  extract_reference.py  rate_reference.py
(+24 files in other folders)
